--- a/app/views/home/_countycoll2.html.erb
+++ b/app/views/home/_countycoll2.html.erb
@@ -1,2 +1,2 @@
-<%= hidden_field_tag :state, @state.STATE_CODE %>
-<%= hidden_field_tag :ratingarea, @state.RATING_AREA %>
+<%= hidden_field_tag :state, @state.state_code %>
+<%= hidden_field_tag :ratingarea, @state.rating_area %>
