--- a/app/views/home/_familyComp.html.erb
+++ b/app/views/home/_familyComp.html.erb
@@ -1,21 +1,16 @@
-<% if @familyComp == 'self'%>
-				
-	How old are you?
-	<%= text_field_tag :age, nil, placeholder: "ex: 41", id: "age" %>
-	<%= hidden_field_tag :nAdults, 1 %>
-	<%= hidden_field_tag :nKids, 0 %>	
-
-<% elsif @familyComp == 'family' %>
-	How many adults are in the household?
-	<%= text_field_tag :nAdults, nil, placeholder: "ex: 2", id: "nAdults" %></br>
-	How many children (17 or younger, that you claim as a dependent on your taxes)?
-	<%= text_field_tag :nKids, nil, placeholder: "ex: 3", id: "nKids" %>
-	<%= hidden_field_tag :age, "Family Option" %>	
-	
-<% else %>
-	How many children (17 or younger, that you claim as a dependent on your taxes) are in the household?
-	<%= hidden_field_tag :nAdults, 0 %>
-	<%= text_field_tag :nKids, nil, placeholder: "ex: 3", id: "nKids" %>
-	<%= hidden_field_tag :age, "Family Option" %>	
-	
-<% end %>
+<%= form_tag(plans_path, method: 'get', action: 'screen') do %>
+	<table>
+		<tr>
+			<td> Age </td>
+			<td> <%= text_field_tag :age, nil, placeholder: "ex: 41", id: "age" %> </td>
+		</tr>	
+		<tr>
+			<td> Does this person smoke or use other tobacco products? </td>
+			<td> 
+				<%= hidden_field_tag :tobacco, "No" %>
+				<%= check_box_tag :tobacco, "Yes", false %> 
+				<%= label_tag(:tobacco, "Yes") %> 
+			</td>
+		</tr>
+	</table>
+<% end %> <br />
