--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,13 +15,10 @@
 
 <body id="page-top" class="index">
 	<section class="main">
-		
 		<div class = "screen">
 			<h1> Quick Screen </h1>	
 			<%= form_tag(plans_path, method: 'get', action: 'screen') do %>
-			
-				<%= hidden_field_tag :workflow, "quickscreen" %>
-				
+							
 				<h3>First, tell us your zip code</h3>
 				<div id="enterZip">
 					<%= text_field_tag :zip, nil, placeholder: "ZIP Code", id: "zipBlur"%>
@@ -58,13 +55,11 @@
 		</div>	
 	
 	<hr>	
-	
+	<!-- =start 	
 		<div class = "navigate">
 			<h1> Navigate </h1>
 			<%= form_tag(plans_path, method: 'get', action: 'navigate') do %>
-				
-				<%= hidden_field_tag :workflow, "navigate" %>
-				
+								
 				<h3>First, tell us your zip code</h3>
 				<div id="enterZip">
 					<%= text_field_tag :zip, nil, placeholder: "ZIP Code", id: "zipBlur"%>
@@ -106,6 +101,7 @@
 			<%= submit_tag 'Navigate', :name=> nil %>
 			<% end %> <br />
 		</div>
+	=end -->
 	</section>
 	
 	<footer>
